--- a/charts/vela-core/templates/defwithtemplate/gateway.yaml
+++ b/charts/vela-core/templates/defwithtemplate/gateway.yaml
@@ -30,7 +30,7 @@ spec:
         		]
         	}
         }
-        outputs: ingress: {
+        `outputs: ingress: {
         	apiVersion: "networking.k8s.io/v1"
         	kind:       "Ingress"
         	metadata: {
@@ -72,7 +72,7 @@ spec:
         			]
         		}]
         	}
-        }
+        }`
         parameter: {
         	// +usage=Specify the domain you want to expose
         	domain?: string
